--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body {
     position: relative; /* Enable positioning for the toggle button */
 }
 .dark-mode {
-    background-color: #1c1c1e; /* Aggiornato il colore di sfondo per la modalità scura */
-    color: white;
+    background-color: #343a40; /* Dark background */
+    color: white; /* White text */
 }
 .light-mode {
-    background-color: white;
-    color: black;
+    background-color: white; /* Light background */
+    color: black; /* Black text */
 }
 .content {
     text-align: center;
@@ -62,4 +62,10 @@ canvas {
 }
 .dark-mode .icon {
     color: #00BFFF; /* Light blue for other icons */
+}
+
+.form-group.theme-switch {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
